# rules_proto_grpc

./: MODULE.bazel
modules/core/internal/: protoc.bzl
modules/grpc_gateway/: go.mod
modules/python/: BUILD.bazel  MODULE.bazel  requirements.in  requirements.txt
test_workspaces/exclusions/: MODULE.bazel
test_workspaces/generated_proto/: MODULE.bazel
test_workspaces/generated_proto/another_workspace/: MODULE.bazel
test_workspaces/nested_output_directory/: MODULE.bazel
test_workspaces/objc_capitalisation/: MODULE.bazel
test_workspaces/relative_strip_import_prefix/: MODULE.bazel
tools/rulegen/: MODULE.bazel.template
